import { createAddress } from '@tevm/address'
import { ERC20 } from '@tevm/contract'
import { MethodNotFoundError, MethodNotSupportedError } from '@tevm/errors'
import { createTevmNode, type TevmNode } from '@tevm/node'
import {
	bytesToHex,
	type EthjsAccount,
	encodeDeployData,
	encodeFunctionData,
	hexToBytes,
	keccak256,
	numberToHex,
	parseGwei,
} from '@tevm/utils'
import { beforeEach, describe, expect, it } from 'vitest'
import { callProcedure } from './Call/callProcedure.js'
import { ethAccountsProcedure } from './eth/ethAccountsProcedure.js'
import { ethSignProcedure } from './eth/ethSignProcedure.js'
import { ethSignTransactionProcedure } from './eth/ethSignTransactionProcedure.js'
import { testAccounts } from './eth/utils/testAccounts.js'
import { blockNumberProcedure, type EthSignTransactionJsonRpcRequest } from './index.js'
import { requestProcedure } from './requestProcedure.js'

const ERC20_ADDRESS = `0x${'69'.repeat(20)}` as const

let client: TevmNode
beforeEach(async () => {
	client = createTevmNode()
	await client.ready()
})

describe('requestProcedure', () => {
	describe('net/web3/rpc compatibility methods', () => {
		it('returns exact formats for net_version, net_peerCount, and net_listening', async () => {
			const netVersion = await requestProcedure(client)({ jsonrpc: '2.0', method: 'net_version', id: 1 })
			const netPeerCount = await requestProcedure(client)({ jsonrpc: '2.0', method: 'net_peerCount', id: 2 })
			const netListening = await requestProcedure(client)({ jsonrpc: '2.0', method: 'net_listening', id: 3 })
			expect(netVersion.result).toMatch(/^0x[0-9a-f]+$/)
			expect(netPeerCount.result).toBe('0x0')
			expect(netListening.result).toBe(true)
		})

		it('validates params and computes keccak for web3_sha3', async () => {
			const ok = await requestProcedure(client)({
				jsonrpc: '2.0',
				method: 'web3_sha3',
				id: 1,
				params: ['0x68656c6c6f20776f726c64'],
			})
			expect(ok.result).toBe('0x47173285a8d7341e5e972fc677286384f802f8ef42a5ec5f03bbfa254cb01fad')

			const bad = await requestProcedure(client)({
				jsonrpc: '2.0',
				method: 'web3_sha3',
				id: 2,
				params: ['hello'] as any,
			})
			expect(bad.error).toBeDefined()
		})
	})

	describe('txpool methods', () => {
		it('returns empty content and status for empty pool', async () => {
			const content = await requestProcedure(client)({ jsonrpc: '2.0', method: 'txpool_content', id: 1 })
			const status = await requestProcedure(client)({ jsonrpc: '2.0', method: 'txpool_status', id: 1 })
			expect(content.result).toEqual({ pending: {}, queued: {} })
			expect(status.result).toEqual({ pending: '0x0', queued: '0x0' })
		})

		it('classifies pending vs queued, supports contentFrom, and status matches content', async () => {
			await requestProcedure(client)({ jsonrpc: '2.0', method: 'anvil_setAutomine', id: 1, params: [false] as any })
			const fromA = testAccounts[0].address
			const to = testAccounts[2].address

			await requestProcedure(client)({
				jsonrpc: '2.0',
				method: 'eth_sendTransaction',
				id: 2,
				params: [{ from: fromA, to, value: '0x1', nonce: '0x1' }] as any,
			})
			await requestProcedure(client)({
				jsonrpc: '2.0',
				method: 'eth_sendTransaction',
				id: 3,
				params: [{ from: fromA, to, value: '0x2', nonce: '0x0' }] as any,
			})
			const content = await requestProcedure(client)({ jsonrpc: '2.0', method: 'txpool_content', id: 5 })
			const status = await requestProcedure(client)({ jsonrpc: '2.0', method: 'txpool_status', id: 7 })
			const sender = (Object.keys(content.result.pending)[0] ?? Object.keys(content.result.queued)[0]) as string
			expect(sender).toBeDefined()
			const contentFrom = await requestProcedure(client)({
				jsonrpc: '2.0',
				method: 'txpool_contentFrom',
				id: 6,
				params: [sender] as any,
			})
			const fromPendingKeys = Object.keys(contentFrom.result.pending)
			const fromQueuedKeys = Object.keys(contentFrom.result.queued)
			expect([...fromPendingKeys, ...fromQueuedKeys].map((k) => k.toLowerCase())).toContain(sender.toLowerCase())
			const pendingCount = Object.values(content.result.pending).reduce(
				(n: number, byNonce: any) => n + Object.keys(byNonce).length,
				0,
			)
			const queuedCount = Object.values(content.result.queued).reduce(
				(n: number, byNonce: any) => n + Object.keys(byNonce).length,
				0,
			)
			expect(status.result).toEqual({
				pending: numberToHex(BigInt(pendingCount)),
				queued: numberToHex(BigInt(queuedCount)),
			})
		})

		it('removes dropped and mined transactions from txpool', async () => {
			await requestProcedure(client)({ jsonrpc: '2.0', method: 'anvil_setAutomine', id: 1, params: [false] as any })
			const from = testAccounts[0].address
			const to = testAccounts[1].address

			const droppedCandidate = await requestProcedure(client)({
				jsonrpc: '2.0',
				method: 'eth_sendTransaction',
				id: 2,
				params: [{ from, to, value: '0x1', nonce: '0x0' }] as any,
			})
			await requestProcedure(client)({
				jsonrpc: '2.0',
				method: 'anvil_dropTransaction',
				id: 3,
				params: [{ transactionHash: droppedCandidate.result }] as any,
			})

			const keptTx = await requestProcedure(client)({
				jsonrpc: '2.0',
				method: 'eth_sendTransaction',
				id: 4,
				params: [{ from, to, value: '0x2', nonce: '0x0' }] as any,
			})
			let status = await requestProcedure(client)({ jsonrpc: '2.0', method: 'txpool_status', id: 5 })
			expect(status.result).toEqual({ pending: '0x1', queued: '0x0' })

			await requestProcedure(client)({ jsonrpc: '2.0', method: 'anvil_mine', id: 6, params: ['0x1', '0x0'] as any })
			status = await requestProcedure(client)({ jsonrpc: '2.0', method: 'txpool_status', id: 7 })
			expect(status.result).toEqual({ pending: '0x0', queued: '0x0' })

			const content = await requestProcedure(client)({ jsonrpc: '2.0', method: 'txpool_content', id: 8 })
			expect(content.result).toEqual({ pending: {}, queued: {} })
			expect(keptTx.result).toMatch(/^0x[0-9a-f]{64}$/)
		})

		it('reflects replacement transactions and preserves sender metadata for unsigned txs', async () => {
			await requestProcedure(client)({ jsonrpc: '2.0', method: 'anvil_setAutomine', id: 1, params: [false] as any })
			const from = testAccounts[0].address
			const to = testAccounts[2].address

			await requestProcedure(client)({
				jsonrpc: '2.0',
				method: 'eth_sendTransaction',
				id: 2,
				params: [{ from, to, value: '0x1', nonce: '0x0', maxFeePerGas: '0x1' }] as any,
			})
			await requestProcedure(client)({
				jsonrpc: '2.0',
				method: 'eth_sendTransaction',
				id: 3,
				params: [{ from, to, value: '0x2', nonce: '0x0', maxFeePerGas: '0x2' }] as any,
			})

			const replacedContent = await requestProcedure(client)({ jsonrpc: '2.0', method: 'txpool_content', id: 4 })
			const sender = Object.keys(replacedContent.result.pending)[0] as string
			expect(Object.keys(replacedContent.result.pending[sender])).toContain('0x0')
			expect(['0x1', '0x2']).toContain(replacedContent.result.pending[sender]['0x0'].value)

			const unsignedCall = await requestProcedure(client)({
				jsonrpc: '2.0',
				method: 'tevm_call',
				id: 5,
				params: [{ createTransaction: true, to, value: '0x3', skipBalance: true }] as any,
			})
			expect(unsignedCall.result.txHash).toMatch(/^0x[0-9a-f]{64}$/)
			const contentAfterUnsigned = await requestProcedure(client)({ jsonrpc: '2.0', method: 'txpool_content', id: 6 })
			const allSenders = [
				...Object.keys(contentAfterUnsigned.result.pending),
				...Object.keys(contentAfterUnsigned.result.queued),
			]
			expect(allSenders.length).toBeGreaterThan(0)
			for (const maybeSender of allSenders) {
				const byNonce =
					contentAfterUnsigned.result.pending[maybeSender] ?? contentAfterUnsigned.result.queued[maybeSender]
				for (const tx of Object.values(byNonce)) {
					expect(((tx as any).from as string).toLowerCase()).toBe(`0x${maybeSender.toLowerCase().replace(/^0x/, '')}`)
				}
			}
		})
	})
	describe('tevm_getAccount', () => {
		it('should work', async () => {
			await requestProcedure(client)({
				jsonrpc: '2.0',
				method: 'tevm_setAccount',
				id: 1,
				params: [
					{
						address: ERC20_ADDRESS,
						deployedBytecode: ERC20.deployedBytecode,
						balance: numberToHex(420n),
						nonce: numberToHex(69n),
					},
				],
			})
			const res = await requestProcedure(client)({
				jsonrpc: '2.0',
				method: 'tevm_getAccount',
				id: 1,
				params: [
					{
						address: ERC20_ADDRESS,
					},
				],
			})
			expect(res.error).toBeUndefined()
			expect(res.result).toEqual({
				codeHash: keccak256(ERC20.deployedBytecode),
				isContract: true,
				isEmpty: false,
				balance: numberToHex(420n),
				nonce: numberToHex(69n),
				deployedBytecode: ERC20.deployedBytecode,
				address: ERC20_ADDRESS,
				storageRoot: '0x56e81f171bcc55a6ff8345e692c0f86e5b48e01b996cadc001622fb5e363b421',
			})
		})
	})
	describe('tevm_setAccount', () => {
		it('should work', async () => {
			const res = await requestProcedure(client)({
				jsonrpc: '2.0',
				method: 'tevm_setAccount',
				id: 1,
				params: [
					{
						address: ERC20_ADDRESS,
						deployedBytecode: ERC20.deployedBytecode,
						balance: numberToHex(420n),
						nonce: numberToHex(69n),
					},
				],
			})
			expect(res.error).toBeUndefined()
			const account = (await (
				await client.getVm()
			).stateManager.getAccount(createAddress(ERC20_ADDRESS))) as EthjsAccount
			expect(account?.balance).toBe(420n)
			expect(account?.nonce).toBe(69n)
			expect(bytesToHex(account.codeHash)).toEqual(keccak256(ERC20.deployedBytecode))
		})
		it('should handle account throwing an unexpected error', async () => {
			const vm = await client.getVm()
			vm.stateManager.putAccount = () => {
				throw new Error('unexpected error')
			}
			const res = await requestProcedure(client)({
				jsonrpc: '2.0',
				method: 'tevm_setAccount',
				id: 1,
				params: [
					{
						address: ERC20_ADDRESS,
						deployedBytecode: ERC20.deployedBytecode,
						balance: numberToHex(420n),
						nonce: numberToHex(69n),
					},
				],
			})
			expect(res).toMatchSnapshot()
		})
	})

	describe('tevm_call', async () => {
		it('should work', async () => {
			const to = `0x${'69'.repeat(20)}` as const
			expect(
				await callProcedure(client)({
					jsonrpc: '2.0',
					method: 'tevm_call',
					id: 1,
					params: [
						{
							createTransaction: true,
							to,
							value: numberToHex(420n),
							skipBalance: true,
						},
					],
				}),
			).toEqual({
				id: 1,
				method: 'tevm_call',
				jsonrpc: '2.0',
				result: {
					amountSpent: '0x23e38',
					totalGasSpent: '0x5208',
					executionGasUsed: numberToHex(0n),
					rawData: '0x',
					txHash: '0x5e5b342fae6b13548e62c3038078915397ebd2406a8c67afd276e8dc84ebba80',
				},
			})

			const txPool = await client.getTxPool()

			const poolTx = txPool.getByHash([
				hexToBytes('0x5e5b342fae6b13548e62c3038078915397ebd2406a8c67afd276e8dc84ebba80'),
			]) as any

			expect(poolTx).toHaveLength(1)

			expect(poolTx[0]?.toJSON()).toEqual({
				accessList: [],
				chainId: '0x384',
				data: '0x',
				gasLimit: '0x5a3c',
				maxFeePerGas: '0x7',
				maxPriorityFeePerGas: '0x0',
				nonce: '0x0',
				r: undefined as any,
				s: undefined as any,
				v: undefined as any,
				to: '0x6969696969696969696969696969696969696969',
				type: '0x2',
				value: '0x1a4',
			})
		})
	})

	describe('tevmCall with script', async () => {
		it('should work', async () => {
			expect(
				await callProcedure(client)({
					jsonrpc: '2.0',
					method: 'tevm_call',
					id: 1,
					params: [
						{
							code: encodeDeployData({
								abi: ERC20.abi,
								bytecode: ERC20.bytecode,
								args: ['Name', 'SYMBOL'],
							}),
							data: encodeFunctionData(ERC20.read.balanceOf(ERC20_ADDRESS)),
							to: ERC20_ADDRESS,
						},
					],
				}),
			).toEqual({
				method: 'tevm_call',
				jsonrpc: '2.0',
				id: 1,
				result: {
					amountSpent: '0x297fd',
					executionGasUsed: '0xb23',
					gas: '0x1c964a5',
					totalGasSpent: '0x5edb',
					rawData: '0x0000000000000000000000000000000000000000000000000000000000000000',
					selfdestruct: [],
					logs: [],
					createdAddresses: [],
				},
			})
		})

		it('should handle the evm throwing an error', async () => {
			const caller = `0x${'69'.repeat(20)}` as const
			expect(
				await callProcedure(client)({
					jsonrpc: '2.0',
					method: 'tevm_call',
					id: 1,
					params: [
						{
							code: encodeDeployData({
								abi: ERC20.abi,
								bytecode: ERC20.bytecode,
								args: ['Name', 'SYMBOL'],
							}),
							data: encodeFunctionData({
								abi: ERC20.abi,
								functionName: 'transferFrom',
								args: [caller, caller, 420n],
							}),
							to: ERC20_ADDRESS,
						},
					],
				}),
			).toMatchSnapshot()
		})
	})

	describe('eth_blockNumber', async () => {
		it('should work', async () => {
			// send value
			expect(
				await blockNumberProcedure(client)({
					jsonrpc: '2.0',
					method: 'eth_blockNumber',
					id: 1,
				}),
			).toEqual({
				id: 1,
				method: 'eth_blockNumber',
				jsonrpc: '2.0',
				result: '0x0',
			})
		})
	})

	describe('eth_accounts', () => {
		it('should return the accounts', async () => {
			expect(
				await ethAccountsProcedure(testAccounts)({
					jsonrpc: '2.0',
					method: 'eth_accounts',
					id: 1,
				}),
			).toEqual({
				jsonrpc: '2.0',
				method: 'eth_accounts',
				id: 1,
				result: testAccounts.map((account) => account.address),
			})
		})
	})

	describe('ethSignHandler', () => {
		it('should sign a message', async () => {
			const data = '0x42069'
			expect(
				await ethSignProcedure(testAccounts)({
					jsonrpc: '2.0',
					method: 'eth_sign',
					id: 1,
					params: [testAccounts[0].address, data],
				}),
			).toEqual({
				jsonrpc: '2.0',
				method: 'eth_sign',
				id: 1,
				result: await testAccounts[0].signMessage({ message: data }),
			})
		})
	})

	describe('ethSignTransactionHandler', () => {
		const transaction: EthSignTransactionJsonRpcRequest['params'] = [
			{
				data: '0x0',
				from: testAccounts[0].address,
				to: `0x${'69'.repeat(20)}`,
				value: numberToHex(420n),
				gas: numberToHex(23n),
				gasPrice: numberToHex(parseGwei('1')),
				nonce: numberToHex(1n),
			},
		]
		it('should sign a message', async () => {
			expect(
				await ethSignTransactionProcedure({
					accounts: testAccounts,
					getChainId: async () => 10,
				})({
					jsonrpc: '2.0',
					method: 'eth_signTransaction',
					id: 1,
					params: transaction,
				}),
			).toMatchSnapshot()
		})
	})

	describe('unsupported method', () => {
		it('should return a MethodNotFoundError for an unsupported method', async () => {
			const res = await requestProcedure(client)({
				jsonrpc: '2.0',
				method: 'unsupported_method' as any,
				id: 1,
				params: [],
			})

			expect(res.error.code).toBe(MethodNotFoundError.code)
			expect(res).toMatchInlineSnapshot(`
				{
				  "error": {
				    "code": -32601,
				    "message": "UnsupportedMethodError: Unknown method unsupported_method

				Docs: https://tevm.sh/reference/tevm/errors/classes/methodnotfounderror/
				Version: 1.0.0-next.148",
				  },
				  "id": 1,
				  "jsonrpc": "2.0",
				  "method": "unsupported_method",
				}
			`)
		})

		it('should reject blocked zevm alias families that are intentionally omitted', async () => {
			const res = await requestProcedure(client)({
				jsonrpc: '2.0',
				method: 'zevm_voltaire_preparePayload' as any,
				id: 2,
				params: [],
			})
			expect(res.error.code).toBe(MethodNotSupportedError.code)
			expect(res.method).toBe('zevm_voltaire_preparePayload')
		})
	})

	describe('eth_sign and eth_signTransaction routing', () => {
		it('routes eth_sign through requestProcedure to the managed signer', async () => {
			const data = '0x42069'
			const res = await requestProcedure(client)({
				jsonrpc: '2.0',
				method: 'eth_sign',
				id: 1,
				params: [testAccounts[0].address, data],
			})
			expect(res.error).toBeUndefined()
			expect(res.result).toMatch(/^0x/)
		})

		it('routes eth_signTransaction through requestProcedure to the managed signer', async () => {
			const res = await requestProcedure(client)({
				jsonrpc: '2.0',
				method: 'eth_signTransaction',
				id: 2,
				params: [
					{
						from: testAccounts[0].address,
						to: `0x${'69'.repeat(20)}`,
						value: '0x1',
						gas: '0x5208',
						gasPrice: numberToHex(parseGwei('1')),
						nonce: '0x0',
					},
				],
			})
			expect(res.error).toBeUndefined()
			expect(res.result).toMatch(/^0x/)
		})
	})

	/**
	 * TODO: Add the following test cases for more robust coverage:
	 *
	 * 1. Request with missing or invalid ID
	 *    - Verify that when a request is missing an ID, a response is generated with a null ID
	 *    - Verify that non-numeric IDs (strings, objects) are handled correctly
	 *
	 * 2. Request with missing or malformed jsonrpc version
	 *    - Test handling of requests without the jsonrpc field
	 *    - Test handling of requests with incorrect jsonrpc versions (not "2.0")
	 *
	 * 3. Request with missing method field
	 *    - Verify appropriate error response when the method field is missing
	 *
	 * 4. Request with missing or malformed params
	 *    - Test when params are missing but required
	 *    - Test when params are of the wrong type (array vs object)
	 *    - Test when params contain invalid values but in correct structure
	 *
	 * 5. Error propagation from handlers
	 *    - Verify that errors from individual handlers are properly captured and returned
	 *    - Test different error types (validation errors, execution errors, etc.)
	 *
	 * 6. Client readiness handling
	 *    - Test behavior when client.ready() rejects
	 *    - Test behavior when client is in various states (initializing, ready, error)
	 *
	 * 7. Handler invocation with correct parameters
	 *    - Mock handlers to verify they receive the exact request object
	 *
	 * 8. Concurrent requests handling
	 *    - Test performance with multiple simultaneous requests
	 *    - Verify that requests don't interfere with each other
	 *
	 * 9. TypeScript type safety tests
	 *    - Verify the type definitions match the implementation
	 *    - Test with different request types to ensure proper typing
	 *
	 * 10. Method case sensitivity handling
	 *     - Test if method names are case-sensitive
	 *     - Test with methods in different casings
	 *
	 * 11. Boundary test for large requests
	 *     - Test with very large parameter payloads
	 *     - Test with many nested objects in parameters
	 *
	 * 12. Handle unexpected exceptions
	 *     - Test behavior when an unexpected exception occurs inside a handler
	 *
	 * 13. Handler return value validation
	 *     - Test when a handler returns invalid response structures
	 *     - Test when a handler returns undefined or null
	 *
	 * 14. Client logging verification
	 *     - Verify that requests are properly logged with client.logger.debug
	 *     - Test log behavior in error scenarios
	 *
	 * 15. Test all method handler mappings
	 *     - Verify that each method in createHandlers is correctly mapped and invoked
	 *     - Test aliased methods (e.g., anvil/tevm/ganache/hardhat variants)
	 *
	 * 16. Response format verification
	 *     - Verify that all responses have the required JSON-RPC fields
	 *     - Test response structure when errors occur
	 */
})
