// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`requestProcedure > ethSignTransactionHandler > should sign a message 1`] = `
{
  "id": 1,
  "jsonrpc": "2.0",
  "method": "eth_signTransaction",
  "result": "0xf86301843b9aca00179469696969696969696969696969696969696969698201a40037a0313f6031a444d215624c95467cd0e4728cb1888885f6efaed6c2f298b52dddf8a06548dda2d562a38a0dd5a5b1d51cc3bf606f83c460bc35fd4948edc630ff6f6b",
}
`;

exports[`requestProcedure > tevm_setAccount > should handle account throwing an unexpected error 1`] = `
{
  "error": {
    "code": -32603,
    "data": {
      "errors": [
        "Unexpected error setting account

Docs: https://tevm.sh/reference/tevm/errors/classes/internalerror/
Details: unexpected error
Version: 1.0.0-next.148",
      ],
    },
    "message": "Unexpected error setting account

Docs: https://tevm.sh/reference/tevm/errors/classes/internalerror/
Details: unexpected error
Version: 1.0.0-next.148",
  },
  "id": 1,
  "jsonrpc": "2.0",
  "method": "tevm_setAccount",
}
`;

exports[`requestProcedure > tevmCall with script > should handle the evm throwing an error 1`] = `
{
  "error": {
    "code": 3,
    "data": {
      "data": "0xfb8f41b20000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000001a4",
      "errors": [
        "revert

Docs: https://tevm.sh/reference/tevm/errors/classes/reverterror/
Details: {"error":"revert","errorType":"EVMError"}
Version: 1.0.0-next.148",
      ],
    },
    "message": "execution reverted: custom error 0xfb8f41b2: 0x0000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000001a4",
  },
  "id": 1,
  "jsonrpc": "2.0",
  "method": "tevm_call",
}
`;
